--- a/hr/index.html
+++ b/hr/index.html
@@ -680,7 +680,7 @@
             const loadingId = 'loading-' + Date.now();
             messagesDiv.innerHTML += `<div class="message ai" id="${loadingId}"><div class="typing-indicator"><span></span><span></span><span></span></div></div>`;
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
-            const systemPrompt = "당신은 '레스토지니'의 유능한 AI 노무사입니다...";
+            const systemPrompt = "당신은 '레스토지니'의 유능한 AI 노무사입니다. 사용자는 식당이나 카페를 운영하는 자영업자입니다. 대한민국 근로기준법에 기반하여 주휴수당, 퇴직금, 4대보험, 해고 예고 수당 등에 대한 질문에 친절하고 전문적으로 답변해 주세요. 복잡한 법률 용어보다는 사장님이 이해하기 쉬운 말로 설명해 주세요.";
             const responseText = await callGemini(text, systemPrompt);
             const loadingEl = document.getElementById(loadingId);
             if(loadingEl) loadingEl.innerHTML = marked.parse(responseText);
@@ -706,7 +706,7 @@
                 reportData.totalCost += calc.grossPay;
                 reportData.details.push({ name: emp.name, role: emp.role, type: emp.type, grossPay: calc.grossPay, totalHours: calc.totalHours, juhyuOccurred: calc.dailyLogs.some(l => l.juhyuPay > 0), absentCount: calc.dailyLogs.filter(l => l.status === '-' && (emp.role === 'manager' || emp.role === 'owner')).length });
             });
-            const prompt = `다음은 매장의 ${monthStr} 급여 정산 데이터입니다...`;
+            const prompt = `다음은 매장의 ${monthStr} 급여 정산 데이터(JSON)입니다. 이 데이터를 분석하여 사장님을 위한 '경영 인사이트 리포트'를 작성해 주세요. 데이터: ${JSON.stringify(reportData)} 작성 가이드: 1. 총 인건비 요약 2. 주요 특징 (최다 급여자, 주휴수당 발생 여부) 3. 경영 조언. 톤앤매너: 토스 스타일 부드러운 해요체.`;
             const responseText = await callGemini(prompt, "당신은 데이터 분석에 능한 AI 경영 컨설턴트입니다.");
             contentDiv.innerHTML = marked.parse(responseText);
         }
