--- a/hr/index.html
+++ b/hr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="robots" content="noindex, nofollow">
-    <title>레스토지니 v2.0.11 (Click Fix)</title>
+    <title>레스토지니 v2.0.12 (Final Fix)</title>
     
     <!-- Pretendard Font -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
@@ -49,7 +49,6 @@
 <body class="h-screen w-screen flex overflow-hidden bg-[#F2F4F6]">
 
     <!-- Loading Overlay -->
-    <!-- Fixed: Removed 'flex' class from here. It will be added by JS when needed. -->
     <div id="global-loading" class="hidden fixed inset-0 z-[9999] bg-white/80 backdrop-blur-sm flex-col items-center justify-center">
         <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-600 mb-4"></div>
         <p class="text-blue-600 font-bold animate-pulse" id="loading-text">데이터 동기화 중...</p>
@@ -74,7 +73,7 @@
                     <div class="text-sm font-bold text-gray-700">김점장님</div>
                 </div>
             </div>
-            <div class="text-xs text-gray-300 mt-2 pl-1">v2.0.11 (Click Fix)</div>
+            <div class="text-xs text-gray-300 mt-2 pl-1">v2.0.12 (Final Fix)</div>
             <button onclick="openConfig()" class="text-xs text-blue-400 underline mt-1 pl-1">API 설정</button>
         </div>
     </aside>
