--- a/hr/index.html
+++ b/hr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="robots" content="noindex, nofollow">
-    <title>레스토지니 v2.2.0 (Payroll Date Nav)</title>
+    <title>레스토지니 v2.2.1 (Schedule Grid Fix)</title>
     
     <!-- Pretendard Font -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
@@ -97,7 +97,7 @@
                     <div class="text-sm font-bold text-gray-700">김점장님</div>
                 </div>
             </div>
-            <div class="text-xs text-gray-300 mt-2 pl-1">v2.2.0 (Payroll Date Nav)</div>
+            <div class="text-xs text-gray-300 mt-2 pl-1">v2.2.1 (Schedule Grid Fix)</div>
             <button onclick="openConfig()" class="text-xs text-blue-400 underline mt-1 pl-1">API 설정</button>
         </div>
     </aside>
@@ -191,7 +191,7 @@
                                 <div class="flex flex-col border-r border-gray-100 text-xs text-gray-400 font-medium text-center bg-gray-50">
                                     <script>
                                         for(let i=0; i<=24; i++) {
-                                            document.write(`<div class="h-[20px] border-b border-gray-100 flex items-start justify-center pt-1">${String(i).padStart(2,'0')}:00</div>`);
+                                            document.write(`<div class="h-[40px] border-b border-gray-100 flex items-start justify-center pt-1">${String(i).padStart(2,'0')}:00</div>`);
                                         }
                                     </script>
                                 </div>
