--- a/website/sample2.html
+++ b/website/sample2.html
@@ -431,7 +431,7 @@
                         단순한 사건 처리가 아닌, 의뢰인의 삶을 지키는 파트너가 되겠습니다.
                     </p>
                     <ul class="career-list">
-                        <li>서울대학교 법과대학 졸업</li>
+                        <li>00 대학교 법과대학 졸업</li>
                         <li>제00회 사법시험 합격 / 사법연수원 00기</li>
                         <li>前 서울중앙지방검찰청 검사</li>
                         <li>現 대법원 국선변호인</li>
